<resources>
    <string name="app_name">Carbon FootPrint</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">LogOut</string>
    <string name="your_food_print">From Food</string>
    <string name="your_vehicle">From Vehicle</string>
    <string name="your_flight">From Flight</string>
    <string name="your_home">From Home</string>
    <string name="others">From Others</string>
    <string name="from_all">From All</string>
</resources>