<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="5dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:text="@string/logout">
    </Button>

    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="right"
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!">
    </TextView>

    <TextView
        android:text="Calculate Your Carbon Footprint"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <Button
        android:id="@+id/home"
        android:text="@string/your_home"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/food"
        android:text="@string/your_food_print"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/vehicle"
        android:text="@string/your_vehicle"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/flight"
        android:text="@string/your_flight"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/others"
        android:text="@string/others"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/all"
        android:text="From All"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/reduce_carbon_footprint"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:text="How to Reduce Carbon Footprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>


</LinearLayout>