<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Register">


    <TextView
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.textfield.TextInputEditText>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    
    <TextView
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
</LinearLayout>